--- a/app/src/main/res/layout/activity_institution_home.xml
+++ b/app/src/main/res/layout/activity_institution_home.xml
@@ -43,6 +43,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Print Qr Code"/>
+        <Button
+            android:id="@+id/institutionHomeService"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Service"/>
 
     </LinearLayout>
 
