--- a/app/src/main/res/layout/content_user_home.xml
+++ b/app/src/main/res/layout/content_user_home.xml
@@ -32,11 +32,13 @@
         android:orientation="vertical"
         android:visibility="gone">
         <TextView
+            android:id="@+id/userHomeCurrentPosition"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Current status"
+            android:text="Current Position : "
             android:textSize="30dp"/>
         <TextView
+            android:id="@+id/userHomeEstimatedTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Estimated Time : "
