--- a/app/src/main/res/layout/activity_sign_upp.xml
+++ b/app/src/main/res/layout/activity_sign_upp.xml
@@ -34,11 +34,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="Conform Password"/>
+
+        <Spinner
+            android:id="@+id/signupSpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            />
+
         <Button
             android:id="@+id/signupSubmitButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign Up"/>
+            android:text="Sign Up"
+            />
 
 
     </LinearLayout>
