--- a/app/src/main/res/layout/activity_institution_home.xml
+++ b/app/src/main/res/layout/activity_institution_home.xml
@@ -28,6 +28,7 @@
             android:layout_height="wrap_content"
             android:text="Settings"/>
         <Button
+            android:id="@+id/institutionSignout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Logout"/>
