--- a/app/src/main/res/layout/activity_sign_upp.xml
+++ b/app/src/main/res/layout/activity_sign_upp.xml
@@ -16,31 +16,49 @@
             android:id="@+id/signupNameField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Name"/>
+            android:hint="Name"
+            android:textAlignment="center"
+            android:inputType="text"/>
 
         <EditText
             android:id="@+id/signupEmailField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Email"/>
+            android:textAlignment="center"
+            android:hint="Email"
+            android:inputType="textEmailAddress"/>
         <EditText
             android:id="@+id/signupPassField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Password"/>
+            android:hint="Password"
+            android:textAlignment="center"
+            android:inputType="textPassword"/>
 
         <EditText
             android:id="@+id/signupRepeatPassField"
+            android:textAlignment="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Conform Password"/>
+            android:hint="Conform Password"
+            android:inputType="textPassword"/>
 
         <Spinner
             android:id="@+id/signupSpinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:layout_marginTop="15dp"
             />
+
+        <EditText
+            android:visibility="gone"
+            android:id="@+id/signupNumberOfCounter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Counters Needed"
+            android:textAlignment="center"
+            android:inputType="number"/>
 
         <Button
             android:id="@+id/signupSubmitButton"
