--- a/app/src/main/res/layout/activity_institution_option.xml
+++ b/app/src/main/res/layout/activity_institution_option.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InstitutionOption">
+    tools:context=".InstitutionOption"
+    android:background="@drawable/bg">
 
     <LinearLayout
         android:layout_width="match_parent"
