--- a/app/src/main/res/layout/activity_sign_inn.xml
+++ b/app/src/main/res/layout/activity_sign_inn.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignInn">
+    tools:context=".SignInn"
+    android:background="@drawable/bg">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
