--- a/app/src/main/res/layout/activity_institution_option.xml
+++ b/app/src/main/res/layout/activity_institution_option.xml
@@ -15,6 +15,7 @@
         android:foregroundGravity="center">
 
         <TextView
+            android:textColor="#FFFFFF"
             android:textAlignment="center"
             android:id="@+id/insttutionOptionServiceLeft"
             android:textSize="30dp"
