--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+    android:background="@drawable/bg"
     tools:context=".splash"
     >
 
@@ -17,7 +17,8 @@
         android:gravity="center"
         android:keepScreenOn="true"
         android:text="Qskip"
-        android:textColor="#33b5e5"
+
+        android:textColor="#ffffff"
         android:textSize="50sp"
         android:textStyle="bold" />
 
